<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_main"
    app:startDestination="@+id/navigation_display">

    <fragment
        android:id="@+id/displayFragment"
        android:name="com.atinytot.vegsp_v_1.ui.display.DisplayFragment"
        android:label="@string/show"
        tools:layout="@layout/fragment_display" />

    <fragment
        android:id="@+id/videoFragment"
        android:name="com.atinytot.vegsp_v_1.ui.video.VideoFragment"
        android:label="@string/circuit"
        tools:layout="@layout/fragment_display" />

    <fragment
        android:id="@+id/rangingFragment"
        android:name="com.atinytot.vegsp_v_1.ui.ranging.RangingFragment"
        android:label="@string/install"
        tools:layout="@layout/fragment_display" />
</navigation>